Fixed panel/window body offset issue when collapsing in Opera
git-svn-id: http://code.extjs.com/svn/ext/trunk@2292 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/panel.css
+++ b/resources/css/panel.css
@@ -142,6 +142,7 @@
 .x-panel-bwrap {
     overflow:hidden;
     zoom:1;
+    left:0;top:0;
 }
 .x-panel-body {
     overflow:hidden;
