--- a/resources/css/window.css
+++ b/resources/css/window.css
@@ -28,6 +28,7 @@
     z-index:1;
     position:relative;
     zoom:1;
+    left:0;top:0;
 }
 .x-window-tl .x-window-header {
     color:#15428b;
